tests/rosetta/transpiler/FS/constrained-random-points-on-a-circle-1.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/constrained-random-points-on-a-circle-1.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Constrained-random-points-on-a-circle-1' based on the file name 'constrained-random-points-on-a-circle-1.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/constrained-random-points-on-a-circle-1.fs(50,81): error FS0001: The type 'bigint' does not match the type 'int'

/workspace/mochi/tests/rosetta/transpiler/FS/constrained-random-points-on-a-circle-1.fs(51,81): error FS0001: The type 'bigint' does not match the type 'int'

/workspace/mochi/tests/rosetta/transpiler/FS/constrained-random-points-on-a-circle-1.fs(58,20): error FS0001: This expression was expected to have type
    int    
but here has type
    bigint    

/workspace/mochi/tests/rosetta/transpiler/FS/constrained-random-points-on-a-circle-1.fs(58,27): error FS0001: This expression was expected to have type
    int    
but here has type
    bigint    
